tests/golden/type_errors/map_merge_non_first.cd
merge(1, {"a": 1});
