tests/golden/type_errors/map_merge_non_first.err
Type error at 1:18: merge expects map as first argument, got number
  merge(1, {"a": 1});
                   ^
